--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^3.2.2",
     "morgan": "~1.9.0",
     "nodemon": "^1.18.10",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "socket.io": "^2.2.0"
   }
 }
