--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "cart",
+  "name": "login-thing",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "child-process": "^1.0.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
+    "express-fileupload": "^1.1.3-alpha.2",
+    "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
-    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.20",
     "morgan": "~1.9.0",
-    "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
