--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
